--- a/Styles/style.css
+++ b/Styles/style.css
@@ -13,6 +13,24 @@
   100% {opacity: 100;}
 }
 
+h2, footer {
+  background: rgb(105, 80, 59);
+  width: 100%;
+  height: 125px;
+  margin: 0px;
+  padding: 0px;
+}
+
+.buttongrid {
+  margin-right: auto;
+  width: 80%;
+  height: 100%;
+  background-color: wheat;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-evenly;
+}
+
 .bg {
   background-image: url("../Images/bgplace.png");
   background-color: #cccccc;
@@ -23,7 +41,7 @@
   position: relative;
 }
 
-.intro {
+.section {
   padding: 15%;
 
   display: flex;
@@ -31,11 +49,11 @@
   justify-content: space-between;
 }
 
-.intro-text {
+.section-left {
   margin-right: 20px;
 }
 
-.intro.image {
+.section-right {
   margin-left: auto;
 }
 
@@ -53,14 +71,6 @@
   text-decoration-style: wavy;
   font-family: cursive;
   text-align: center;
-}
-
-h2, footer {
-  background: rgb(105, 80, 59);
-  width: 100%;
-  height: 125px;
-  margin: 0px;
-  padding: 0px;
 }
 
 .logo {
