--- a/Styles/style.css
+++ b/Styles/style.css
@@ -25,7 +25,7 @@ h2, footer {
   margin-right: auto;
   width: 80%;
   height: 100%;
-  background-color: wheat;
+  background-color: rgb(105, 80, 59);
   display: flex;
   align-items: flex-start;
   justify-content: space-evenly;
