--- a/Styles/style.css
+++ b/Styles/style.css
@@ -13,7 +13,7 @@
   100% {opacity: 100;}
 }
 
-h2, footer {
+header, footer {
   background: rgb(105, 80, 59);
   width: 100%;
   height: 125px;
@@ -25,7 +25,6 @@ h2, footer {
   margin-right: auto;
   width: 80%;
   height: 100%;
-  background-color: rgb(105, 80, 59);
   display: flex;
   align-items: flex-start;
   justify-content: space-evenly;
@@ -94,21 +93,13 @@ header {
   font-style: bold;
   text-decoration: underline;
   font-family: cursive;
-  font-size: 2cap;
+  font-size: 3cap;
 
   transition: transform 0.2s ease;
 }
 
 .button1:hover {
   transform: scale(1.15);
-}
-
-h2, footer {
-  background: rgb(105, 80, 59);
-  width: 100%;
-  height: 125px;
-  margin: 0px;
-  padding: 0px;
 }
 
 .logo {
